fix: make pluck shells drop base blocks when mined